--- a/system/nginx_config.conf
+++ b/system/nginx_config.conf
@@ -2,7 +2,7 @@ server {
   listen 8080;
   location / {
   if ($request_method = 'OPTIONS') {
-        add_header 'Access-Control-Allow-Origin' 'https://a9a7-45-144-196-109.ngrok-free.app';
+        add_header 'Access-Control-Allow-Origin' 'https://5ac7-79-170-109-21.ngrok-free.app/';
         #
         # Om nom nom cookies
         #
@@ -21,25 +21,25 @@ server {
         return 204;
      }
      if ($request_method = 'POST') {
-        add_header 'Access-Control-Allow-Origin' 'https://a9a7-45-144-196-109.ngrok-free.app';
+        add_header 'Access-Control-Allow-Origin' 'https://5ac7-79-170-109-21.ngrok-free.app/';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,authorization';
      }
       if ($request_method = 'DELETE') {
-        add_header 'Access-Control-Allow-Origin' 'https://a9a7-45-144-196-109.ngrok-free.app';
+        add_header 'Access-Control-Allow-Origin' 'https://5ac7-79-170-109-21.ngrok-free.app/';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,authorization';
      }
      if ($request_method = 'PATCH') {
-        add_header 'Access-Control-Allow-Origin' 'https://a9a7-45-144-196-109.ngrok-free.app';
+        add_header 'Access-Control-Allow-Origin' 'https://5ac7-79-170-109-21.ngrok-free.app/';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PATCH';
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,authorization';
      }
      if ($request_method = 'GET') {
-        add_header 'Access-Control-Allow-Origin' 'https://a9a7-45-144-196-109.ngrok-free.app';
+        add_header 'Access-Control-Allow-Origin' 'https://5ac7-79-170-109-21.ngrok-free.app/';
         add_header 'Access-Control-Allow-Credentials' 'true';
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
         add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,authorization';
@@ -48,4 +48,3 @@ server {
     proxy_pass http://budget_bot_service:8001;
   }
 }
-
